<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="#adcece"
    android:orientation="vertical"


    android:padding="25sp">



    <TextView
        android:id="@+id/inital_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginBottom="10sp"
        android:background="@drawable/result_drawable"
        android:padding="25dp"
        android:textSize="25sp"

        android:textStyle="italic" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:background="@drawable/drawable_back"
        android:gravity="center"

        android:padding="25dp"

        android:textColor="#000000"
        android:textSize="30sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"

        >



        <Button
            android:id="@+id/num_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"

            android:gravity="top|center"
            android:text="@string/Num7"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic"


            />


        <Button
            android:id="@+id/num_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Num8"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/num_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Num9"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic" />


        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="center"
            android:text="@string/Plus"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        >

        <Button
            android:id="@+id/num_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Num4"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic"/>


        <Button
            android:id="@+id/num_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Num5"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic"/>
        <Button
            android:id="@+id/num_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Num6"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic" />


        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="center"
            android:text="@string/Minus"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/num_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Num1"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic"/>


        <Button
            android:id="@+id/num_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Num2"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic"/>
        <Button
            android:id="@+id/num_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Num3"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic" />


        <Button
            android:id="@+id/multi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="center"
            android:text="@string/Multi"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">


        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Clear"

            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="italic"/>


        <Button
            android:id="@+id/num_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Num0"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic"/>
        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="top|center"
            android:text="@string/Equal"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic" />


        <Button
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:gravity="center"
            android:text="@string/Div"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="italic" />

    </LinearLayout>



</LinearLayout>